--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 	</style>
 </head>
 <body>
-	<p>The website is under construction</p>
+	<p>SSMC BOKA SANGATHAN OFFICIAL PAGE</p>
 </body>
 </html>
