--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Plot Nepal</title>
+	<title>Underconstruction</title>
 	<style>
 		body {
 			display: flex;
@@ -18,6 +18,6 @@
 	</style>
 </head>
 <body>
-	<p>SSMC BOKA SANGATHAN OFFICIAL PAGE</p>
+	<p>The website is currently under-Construction.</p>
 </body>
 </html>
